<resources>
    <string name="app_name">ElecionesComunidad</string>
    <string name="default_user">Introduzca usuario</string>
    <string name="default_pass">Introduzca contraseña</string>
    <string name="titulo_defaul">Inicio de Sesión</string>
    <string name="texto_lb_usuario">Usuario:</string>
    <string name="texto_lb_contraseña">Contraseña:</string>
    <string name="boton_inicio">Acceder</string>
    <string name="contenidoText">Selecione Candidato</string>
    <string name="texto_voto_defecto">Voto 0/3</string>
    <string name="texto_voto_uno">Voto 1/3</string>
    <string name="texto_voto_dos">Voto 2/3</string>
    <string name="texto_voto_tres">Voto 3/3</string>
</resources>